# restaurant_menu_api

Restaurant-Menu-API-main/Restaurant-Menu-API-main/restaurant_menu_api/: README.md  main.py  pyproject.toml  requirements.txt
Restaurant-Menu-API-main/Restaurant-Menu-API-main/restaurant_menu_api/app/: __init__.py  main.py
Restaurant-Menu-API-main/Restaurant-Menu-API-main/restaurant_menu_api/app/models/: __init__.py  menu_item.py  order.py  order_item.py
Restaurant-Menu-API-main/Restaurant-Menu-API-main/restaurant_menu_api/app/repositories/: __init__.py  base_repository.py  menu_repository.py  order_repository.py
Restaurant-Menu-API-main/Restaurant-Menu-API-main/restaurant_menu_api/app/routers/: __init__.py  menu.py  orders.py
Restaurant-Menu-API-main/Restaurant-Menu-API-main/restaurant_menu_api/app/schemas/: __init__.py  menu_item.py  order.py
Restaurant-Menu-API-main/Restaurant-Menu-API-main/restaurant_menu_api/app/services/: __init__.py  menu_service.py  order_service.py
Restaurant-Menu-API-main/Restaurant-Menu-API-main/restaurant_menu_api/data/: menu.json  orders.json
Restaurant-Menu-API-main/Restaurant-Menu-API-main/restaurant_menu_api/static/: index.html
