[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-menu-api"
version = "1.0.0"
description = "API สำหรับจัดการรายการเมนูและคำสั่งซื้อร้านอาหาร - OOP Final Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
